update and cleanup

--- a/summary.tex
+++ b/summary.tex
@@ -125,9 +125,6 @@ nearest neighbour & offline & static\\
 \citeA{gomes_algorithm_2001} & constraints, mixed integer programming &
 past performance & algorithm & statistical model & offline & dynamic\\
 
-\citeA{cowling_parameter-free_2001} & scheduling & instance features & algorithm &
-hand-crafted rules, weights & online & static\\
-
 \citeA{epstein_collaborative_2001,epstein_adaptive_2002,epstein_learning_2005,epstein_learning_2011} &
 constraints & variable characteristics & algorithm & weights, hand-crafted rules
 & offline and online & dynamic\\
@@ -168,6 +165,9 @@ linear regression & offline and online & static\\
 
 \citeA{ruan_restart_2002} & SAT & instance features & restart policy & dynamic
 programming & offline & static\\
+
+\citeA{burke_tabu-search_2003} & scheduling & past performance & algorithm &
+reinforcement learning & online & static\\
 
 \citeA{vrakas_learning_2003} & planning & instance features & parameters &
 classification association rules & offline & dynamic\\
@@ -231,6 +231,9 @@ reinforcement learning & online & static\\
 \citeA{gagliolo_neural_2005} & - & past performance & resource allocation &
 neural nets & online & static\\
 
+\citeA{gendreau_metaheuristics_2005} & vehicle routing, scheduling & past
+performance & algorithm & various & online & static\\
+
 \citeA{armstrong_dynamic_2006} & procedure calls & runtime performance & switch
 algorithm? & reinforcement learning & online & static\\
 
@@ -259,6 +262,9 @@ decision rules & offline & static\\
 
 \citeA{cavazos_method-specific_2006} & software design & instance features &
 algorithm & logistic regression & offline & static\\
+
+\citeA{burke_case-based_2006} & scheduling & instance features & algorithm &
+nearest neighbour & offline & static\\
 
 \citeA{xu_hierarchical_2007} & SAT & instance features & satisfiability and
 runtime performance & sparse multinomial logistic regression, ridge
@@ -315,6 +321,9 @@ and self-organising maps & offline & static\\
 
 \citeA{de_la_rosa_learning_2008,de_la_rosa_scaling_2011} & planning & instance
 features & algorithm & decision tree & online & static\\
+
+\citeA{bai_heuristic_2008} & resource allocation & past performance &
+combination of low-level heuristics & various & online & static\\
 
 \citeA{nikoli_instance-based_2009} & SAT & instance features & search strategy &
 nearest neighbour & offline & static\\
@@ -402,6 +411,9 @@ runtime performance & regression & offline & static\\
 
 \citeA{fialho_toward_2010} & genetic algorithms & past performance & algorithm &
 aggregation & online & static\\
+
+\citeA{burke_genetic_2010} & bin packing & past performance & combinations of
+low-level heuristics & genetic programming & online & static\\
 
 % 2011
 
@@ -506,6 +518,9 @@ classification and regression & offline & static\\
 \citeA{burke_monte_2012} & scheduling & past performance & algorithm &
 reinforcement learning & offline & static\\
 
+\citeA{pillay_study_2012} & bin packing & past performance & combination of
+low-level heuristics & genetic algorithm & offline & static\\
+
 % 2013
 
 \citeA{sabharwal_boosting_2013} & SAT & instance features & resource allocation
@@ -573,6 +588,9 @@ instance features & algorithm & decision tree, neural network, naive Bayes & off
 
 \citeA{nikolic_simple_2013} & SAT & instance features & algorithm & nearest
 neighbour & offline & static\\
+
+\citeA{kendall_competitive_2013} & competitive TSP & instance features &
+algorithm & Bayesian approach & online & static\\
 
 % 2014
 
@@ -654,6 +672,9 @@ multi-armed bandits & online & static\\
 
 \citeA{lopez-camacho_unified_2014} & bin packing & instance features & algorithm
 & nearest neighbour & online & static\\
+
+\citeA{salcedo-sanz_evolutionary-based_2014} & games & past performance &
+combination of low-level heuristics & genetic algorithm & offline & static\\
 
 % 2015
 
@@ -807,6 +828,9 @@ classification & offline & static\\
 
 \citeA{li_hyperheuristic_2017} & games & past performance & algorithm &
 reinforcement learning & online & static\\
+
+\citeA{he_bayesian_2017} & black-box optimization & past performance & algorithm
+& Bayesian approach & offline & static\\
 
 \end{longtable}
 \end{landscape}
