--- a/survey.bib
+++ b/survey.bib
@@ -2933,14 +2933,6 @@
 	pages = {176--190}
 }
 
-@inproceedings{cowling_parameter-free_2001,
-	title = {A {Parameter}-{Free} {Hyperheuristic} for {Scheduling} a {Sales} {Summit}},
-	booktitle = {4th {Metaheuristic} {International} {Conference}, {MIC} 2001},
-	author = {Cowling, Peter and Kendall, Graham and Soubeiga, Eric},
-	year = {2001},
-	pages = {127--131}
-}
-
 @article{li_hyperheuristic_2017,
 	title = {A {Hyperheuristic} {Methodology} to {Generate} {Adaptive} {Strategies} for {Games}},
 	volume = {9},
@@ -2961,4 +2953,101 @@
 	month = nov,
 	year = {2014},
 	pages = {6876--6889}
+}
+
+@article{salcedo-sanz_evolutionary-based_2014,
+	title = {An evolutionary-based hyper-heuristic approach for the {Jawbreaker} puzzle},
+	volume = {40},
+	issn = {1573-7497},
+	number = {3},
+	journal = {Applied Intelligence},
+	author = {Salcedo-Sanz, Sancho and Matías-Román, Juan Manuel and Jiménez-Fernández, Silvia and Portilla-Figueras, Antonio and Cuadra, Lucas},
+	month = apr,
+	year = {2014},
+	pages = {404--414}
+}
+
+@article{pillay_study_2012,
+	title = {A {Study} of {Evolutionary} {Algorithm} {Selection} {Hyper}-{Heuristics} for the {One}-{Dimensional} {Bin} {Packing} {Problem}},
+	volume = {48},
+	journal = {SACJ},
+	author = {Pillay, Nelishia},
+	year = {2012},
+	pages = {31--40}
+}
+
+@article{burke_case-based_2006,
+	title = {Case-based heuristic selection for timetabling problems},
+	volume = {9},
+	number = {2},
+	journal = {Journal of Scheduling},
+	author = {Burke, Edmund K. and Petrovic, Sanja and Qu, Rong},
+	month = apr,
+	year = {2006},
+	pages = {115--132}
+}
+
+@article{kendall_competitive_2013,
+	title = {Competitive travelling salesmen problem: {A} hyper-heuristic approach},
+	volume = {64},
+	number = {2},
+	journal = {Journal of the Operational Research Society},
+	author = {Kendall, Graham and Li, Jiawei},
+	month = feb,
+	year = {2013},
+	pages = {208--216}
+}
+
+@article{gendreau_metaheuristics_2005,
+	title = {Metaheuristics in {Combinatorial} {Optimization}},
+	volume = {140},
+	number = {1},
+	journal = {Annals of Operations Research},
+	author = {Gendreau, Michel and Potvin, Jean-Yves},
+	month = nov,
+	year = {2005},
+	pages = {189--213}
+}
+
+@article{burke_genetic_2010,
+	title = {A {Genetic} {Programming} {Hyper}-{Heuristic} {Approach} for {Evolving} 2-{D} {Strip} {Packing} {Heuristics}},
+	volume = {14},
+	number = {6},
+	journal = {IEEE Transactions on Evolutionary Computation},
+	author = {Burke, Edmund K. and Hyde, Matthew and Kendall, Graham and Woodward, John},
+	month = dec,
+	year = {2010},
+	pages = {942--958}
+}
+
+@inproceedings{he_bayesian_2017,
+	address = {Cham},
+	title = {A {Bayesian} {Restarting} {Approach} to {Algorithm} {Selection}},
+	booktitle = {Simulated {Evolution} and {Learning}},
+	publisher = {Springer International Publishing},
+	author = {He, Yaodong and Yuen, Shiu Yin and Lou, Yang},
+	year = {2017},
+	pages = {397--408}
+}
+
+@article{bai_heuristic_2008,
+	title = {Heuristic, meta-heuristic and hyper-heuristic approaches for fresh produce inventory control and shelf space allocation},
+	volume = {59},
+	number = {10},
+	journal = {Journal of the Operational Research Society},
+	author = {Bai, Ruibin and Burke, Edmund K and Kendall, Graham},
+	month = oct,
+	year = {2008},
+	pages = {1387--1397}
+}
+
+@article{burke_tabu-search_2003,
+	title = {A {Tabu}-{Search} {Hyperheuristic} for {Timetabling} and {Rostering}},
+	volume = {9},
+	number = {6},
+	journal = {Journal of Heuristics},
+	author = {Burke, Edmund K. and Kendall, Graham and Soubeiga, Eric},
+	month = dec,
+	year = {2003},
+	pages = {451--470}
 }
