fix swapped name

--- a/survey.bib
+++ b/survey.bib
@@ -2216,7 +2216,7 @@
 @inproceedings{pihera_application_2014,
 	title = {Application of Machine Learning to Algorithm Selection for {TSP}},
 	booktitle = {{ICTAI}},
-	author = {Pihera, Josef and Nysret, Musliu},
+	author = {Pihera, Josef and Musliu, Nysret},
 	year = {2014}
 }
 
