--- a/survey.bib
+++ b/survey.bib
@@ -3051,3 +3051,188 @@
 	year = {2003},
 	pages = {451--470}
 }
+
+@inproceedings{fuentetaja_meta-search_2018,
+	title = {Meta-{Search} {Through} the {Space} of {Representations} and {Heuristics} on a {Problem} by {Problem} {Basis}},
+	booktitle = {Thirty-{Second} {AAAI} {Conference} on {Artificial} {Intelligence}},
+	publisher = {AAAI Press},
+	author = {Fuentetaja, Raquel and Barley, Michael and Borrajo, Daniel and Douglas, Jordan and Franco, Santiago and Riddle, Patricia},
+	month = apr,
+	year = {2018},
+	pages = {6169--6176}
+}
+
+@incollection{jana_landscape_2018,
+	address = {Cham},
+	title = {Landscape {Characterization} and {Algorithms} {Selection} for the {PSP} {Problem}},
+	booktitle = {A {Metaheuristic} {Approach} to {Protein} {Structure} {Prediction}: {Algorithms} and {Insights} from {Fitness} {Landscape} {Analysis}},
+	publisher = {Springer International Publishing},
+	author = {Jana, Nanda Dulal and Das, Swagatam and Sil, Jaya},
+	year = {2018},
+	pages = {87--150}
+}
+
+@inproceedings{jankee_design_2018,
+	address = {Cham},
+	title = {On the {Design} of a {Master}-{Worker} {Adaptive} {Algorithm} {Selection} {Framework}},
+	booktitle = {Artificial {Evolution}},
+	publisher = {Springer International Publishing},
+	author = {Jankee, Christopher and Verel, Sébastien and Derbel, Bilel and Fonlupt, Cyril},
+	year = {2018},
+	pages = {1--15}
+}
+
+@inproceedings{degroote_regression-based_2018,
+	title = {A {Regression}-{Based} {Methodology} for {Online} {Algorithm} {Selection}},
+	booktitle = {11th {International} {Symposium} on {Combinatorial} {Search} ({SoCS})},
+	author = {Degroote, Hans and De Causmaecker, Patrick and Bischl, Bernd and Kotthoff, Lars},
+	year = {2018},
+	pages = {37--45}
+}
+
+@techreport{georges_feature-based_2018,
+	title = {Feature-{Based} {Algorithm} {Selection} for {Mixed} {Integer} {Programming}},
+	number = {18-17},
+	institution = {ZIB},
+	author = {Georges, Alexander and Gleixner, Ambros and Gojic, Gorana and Gottwald, Robert Lion and Haley, David and Hendel, Gregor and Matejczyk, Bartlomiej},
+	year = {2018}
+}
+
+@article{koitz-hristov_applying_2018,
+	title = {Applying algorithm selection to abductive diagnostic reasoning},
+	volume = {48},
+	number = {11},
+	journal = {Applied Intelligence},
+	author = {Koitz-Hristov, Roxane and Wotawa, Franz},
+	month = nov,
+	year = {2018},
+	pages = {3976--3994}
+}
+
+@article{yuen_selecting_2018,
+	title = {Selecting evolutionary algorithms for black box design optimization problems},
+	journal = {Soft Computing},
+	author = {Yuen, Shiu Yin and Lou, Yang and Zhang, Xin},
+	month = jun,
+	year = {2018}
+}
+
+@article{silva_strategy_2018,
+	title = {Strategy {Generation} for {Multi}-{Unit} {Real}-{Time} {Games} via {Voting}},
+	journal = {IEEE Transactions on Games},
+	author = {Silva, Cleyton R. and Moraes, Rubens O. and Lelis, Levi H. S. and Gal, Kobi},
+	year = {2018},
+	pages = {1--10}
+}
+
+@inproceedings{beham_algorithm_2018,
+	title = {Algorithm {Selection} on {Generalized} {Quadratic} {Assignment} {Problem} {Landscapes}},
+	booktitle = {Genetic and {Evolutionary} {Computation} {Conference}},
+	author = {Beham, Andreas and Wagner, Stefan and Affenzeller, Michael},
+	year = {2018},
+	pages = {253--260}
+}
+
+@article{degroote_applying_2018,
+	title = {Applying {Algorithm} {Selection} – a {Case} {Study} for the {Generalised} {Assignment} {Problem}},
+	volume = {69},
+	journal = {Electronic Notes in Discrete Mathematics},
+	author = {Degroote, Hans and González-Velarde, José Luis and Causmaecker, Patrick De},
+	year = {2018},
+	pages = {205--212}
+}
+
+@inproceedings{gudu_combinatorial_2018,
+	title = {Combinatorial {Auction} {Algorithm} {Selection} for {Cloud} {Resource} {Allocation} {Using} {Machine} {Learning}},
+	booktitle = {Euro-{Par} 2018: {Parallel} {Processing}},
+	author = {Gudu, Diana and Hardt, Marcus and Streit, Achim},
+	year = {2018},
+	pages = {378--391}
+}
+
+@article{elmandouh_guiding_2018,
+	title = {Guiding {Formal} {Verification} {Orchestration} {Using} {Machine} {Learning} {Methods}},
+	volume = {23},
+	number = {5},
+	journal = {ACM Trans. Des. Autom. Electron. Syst.},
+	author = {Elmandouh, Eman M. and Wassal, Amr G.},
+	month = aug,
+	year = {2018},
+	pages = {62:1--62:33}
+}
+
+@inproceedings{ansotegui_self-configuring_2018,
+	title = {Self-configuring {Cost}-{Sensitive} {Hierarchical} {Clustering} with {Recourse}},
+	booktitle = {Principles and {Practice} of {Constraint} {Programming}},
+	author = {Ansotegui, Carlos and Sellmann, Meinolf and Tierney, Kevin},
+	year = {2018},
+	pages = {524--534}
+}
+
+@inproceedings{hoos_portfolio-based_2018,
+	title = {Portfolio-{Based} {Algorithm} {Selection} for {Circuit} {QBFs}},
+	booktitle = {Principles and {Practice} of {Constraint} {Programming}},
+	author = {Hoos, Holger H. and Peitl, Tomáš and Slivovsky, Friedrich and Szeider, Stefan},
+	year = {2018},
+	pages = {195--209}
+}
+
+@article{nikolic_portfolio_2018,
+	title = {Portfolio theorem proving and prover runtime prediction for geometry},
+	journal = {Annals of Mathematics and Artificial Intelligence},
+	author = {Nikolić, Mladen and Marinković, Vesna and Kovács, Zoltán and Janičić, Predrag},
+	month = sep,
+	year = {2018}
+}
+
+@article{hu_intelligent_2012,
+	title = {An intelligent augmentation of particle swarm optimization with multiple adaptive methods},
+	volume = {213},
+	journal = {Information Sciences},
+	author = {Hu, Mengqi and Wu, Teresa and Weir, Jeffery D.},
+	year = {2012},
+	pages = {68--83}
+}
+
+@article{chu_adaptive_2019,
+	title = {Adaptive recommendation model using meta-learning for population-based algorithms},
+	volume = {476},
+	journal = {Information Sciences},
+	author = {Chu, Xianghua and Cai, Fulin and Cui, Can and Hu, Mengqi and Li, Li and Qin, Quande},
+	year = {2019},
+	pages = {192--210}
+}
+
+@article{cui_recommendation_2016,
+	title = {A recommendation system for meta-modeling: {A} meta-learning based approach},
+	volume = {46},
+	journal = {Expert Systems with Applications},
+	author = {Cui, Can and Hu, Mengqi and Weir, Jeffery D. and Wu, Teresa},
+	year = {2016},
+	pages = {33--44}
+}
+
+@article{cui_short-term_2016,
+	title = {Short-term building energy model recommendation system: {A} meta-learning approach},
+	volume = {172},
+	journal = {Applied Energy},
+	author = {Cui, Can and Wu, Teresa and Hu, Mengqi and Weir, Jeffery D. and Li, Xiwang},
+	year = {2016},
+	pages = {251--263}
+}
+
+@inproceedings{deng_automatic_2018,
+	title = {Automatic {Classifier} {Selection} {Based} on {Classification} {Complexity}},
+	booktitle = {Pattern {Recognition} and {Computer} {Vision}},
+	author = {Deng, Liping and Chen, Wen-Sheng and Pan, Binbin},
+	year = {2018},
+	pages = {292--303}
+}
+
+@article{wang_wombit_2018,
+	title = {Wombit: {A} {Portfolio} {Bit}-{Vector} {Solver} {Using} {Word}-{Level} {Propagation}},
+	journal = {Journal of Automated Reasoning},
+	author = {Wang, Wenxi and Søndergaard, Harald and Stuckey, Peter J.},
+	month = nov,
+	year = {2018}
+}
